_css/style.css
:root {
  --primary-color: #333;
  --muted-color: #666; /* 525252 */
  --secondary-color: #ab5a03; /* #7f4302*/
}

body {
  background: url(../_img/bg.png);
  font-family: Palatino, "Palatino Lynotype", "Book Antiqua", "Hoefler Text",
    Georgia, "Lucida Bright", Cambria, Times, "Times New Roman", serif;
}
h1 {
  font-size: 24px;
  margin-top: 10px;
  color: var(--secondary-color);
  text-align: center;
  font-weight: bold;
}
h2 {
  font-size: 18px;
  text-align: center;
  font-weight: bold;
}
a {
  font-size: 16px;
  color: var(--secondary-color);
  text-decoration: none;
}
a:hover {
  color: black;
  text-decoration: none;
}
p {
  font-size: 16px;
  margin: 6px 0 6px 0;
}
li {
  font-size: 16px;
}
@media screen and (max-width: 1200px) {
}
@media screen and (max-width: 992px) {
}
@media screen and (max-width: 768px) {
  p {
    font-size: 16px;
  }
}
/*=================================================================================*/
.container {
  background-color: #f4f4f4;
}
.row {
  border-bottom: 1px solid #c0c0c0;
  padding: 5px 0px 5px 0px;
}
.p0 {
  padding: 0;
}
.bdn {
  border: none;
}
.tac {
  text-align: center;
}
.red {
  color: red;
}
.button {
  margin: 0px 0;
  padding: 8px 8px;
  background: linear-gradient(white, lightgray);
  border: 1px solid gray;
  border-radius: 4px;
  font-size: 14px;
  color: var(--secondary-color);
  font-weight: bold;
  text-decoration: none;
}
.button:hover {
  background: linear-gradient(lightgray, white);
}
.divider {
  margin-top: 5px;
  margin-bottom: 5px;
  height: 1px;
  width: 100%;
  border-top: 1px solid gray;
}
/*---------------------- header ------------------------*/
.address {
  text-align: center;
  color: var(--secondary-color);
  font-size: 24px;
  margin-top: 20px;
}
.phone {
  text-align: right;
  color: var(--secondary-color);
  margin-top: 20px;
}
.phone a {
  font-size: 24px;
}
@media screen and (max-width: 768px) {
  .address {
    font-size: 15px;
    text-align: right;
    margin: 10px 5px 0 0;
  }
  .phone {
    margin: 0px 5px 5px 0;
  }
}
/*---------------------- navigation ------------------------*/
.navbar {
  margin-bottom: 0;
}
.navbar-brand {
  font-weight: bold;
}
.navbar-default {
  background-color: #f4f4f4;
}
.navbar-default .navbar-nav > li > a {
  color: var(--muted-color);
}
.navbar-default .navbar-nav > .active > a {
  background: linear-gradient(#eee, #ccc);
  font-weight: bold;
}
.navbar-default .navbar-nav > .active > a:hover {
  background: linear-gradient(#ccc, #eee);
}

/*---------------------- index page ------------------------*/
.zayavka {
  border-radius: 5px;
  padding: 0px 15px 15px;
  border: 1px solid #ccc;
  text-align: center;
  margin-top: 10px;
}
.news {
  width: 50px;
}
.highlight h2 {
  border-bottom: 1px solid #555;
  padding-bottom: 10px;
}
.highlight ul {
  padding-left: 0;
}
.highlight li {
  background: url(../_img/check.png) no-repeat 1px 5px;
  padding: 0 0 5px 28px;
  list-style: none;
}
.cite {
  font-size: 14px;
  font-style: italic;
  color: var(--muted-color);
}
.highlightp {
  background: url(../_img/check.png) no-repeat 1px 9px;
  padding: 5px 0 5px 28px;
  font-weight: bold;
}
.video h2 {
  margin: 15px 0 5px 0;
}
.embed-responsive-item {
  padding: 5px 10px 5px 0px;
}

.cell {
  width: 100px;
}
.cell2 {
  width: 150px;
}
/*---------------------- footer ------------------------*/
.footer {
  background-color: #eee;
  padding-top: 0px;
}
.footer p {
  font-size: 14px;
  color: var(--muted-color);
  padding-top: 15px;
}
@media screen and (max-width: 768px) {
  .footer p {
    padding-top: 1px;
  }
}

